# kyujin-scraper

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: scrape-daily.yml
ops/: HelloWorksScraper.plist
src/helloworks_scraper/: address.py  categories.py  classify.py  items.py  main.py  pipelines.py  salary.py  spider.py  upload.py
tests/: test_address.py  test_categories.py  test_classify.py  test_pipelines.py  test_salary.py  test_spider_meta.py  test_upload.py
tests/fixtures/: detail.html  listing.html
