[project]
name = "helloworks-scraper"
version = "0.1.0"
description = "HelloWorks v2 multi-industry kyujinbox.com scraper"
requires-python = ">=3.12,<3.13"
dependencies = [
    "scrapy>=2.11.0",
    "supabase>=2.5.0",
    "python-dotenv>=1.0.0",
    "normalize-japanese-addresses>=0.0.9",
    "scrapy-impersonate>=1.6.0",
    "curl-cffi>=0.15.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/helloworks_scraper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
